Gtk-3.20&3.22&4.0: [Lollypop] Fix weird 'Ratings' and 'Heart' GtkWidget alignment
Lollypop...

This fixes the issue: #546.

--- a/gtk/sass/3.22/_3rd-party.scss
+++ b/gtk/sass/3.22/_3rd-party.scss
@@ -2464,6 +2464,20 @@ row.trackrow {
   -gtk-outline-radius: 2px;
 }
 
+// Track menu GtkPopover
+popover.background.menu > stack > grid.vertical {
+  // parent container of GtkWidgets 'Ratings' and 'Heart'
+  > grid.horizontal {
+    // subtract hard-coded useless margin in child widgets
+    margin: -5px 0 6px;
+    // add extra menuitem's bottom padding
+    padding-bottom: if($ref_weight < 1.0, calc(6px + 0.35rem),
+                                          calc(6px + 0.5rem));
+
+    // > widget { margin: 0; }
+  }
+}
+
 
 // /***************************
 //  * Cinnamon-Control-Center *
